2008-01-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_enums.c (rbgobj_init_flags_class): added "_" prefix
	to fix invalid predicate method name that starts with
	digits. e.g. 4mv? -> _4mv?. Or just ignore?

	* src/rbgobj_convert.c (rbgobj_convert_rvalue2gtype): implemented.

2008-01-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RARRAY_PTR, RARRAY_LEN): defined.

	* src/rbgobject.h (GPTR2RVAL, RVAL2GPTR): added.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: don't use ftools.
	Reported by Carlo E. Prelz. Thanks!!!

2008-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_value.c, src/rbgobject.h, src/glib2.def
	(rbgobj_initialize_gvalue): added. (experimental)

	* src/rbgobj_convert.c, src/rbgprivate.h
	(rbgobj_convert_rvalue2gtype): should be implemented.

2007-12-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil_callback.c: fixed ruby's thread check.

	* src/rbgutil_callback.c: fixed a wrong select() argument.
	Reported by Carlo E. Prelz. Thanks!!!

2007-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c: moved poll related functions to ...
	* src/rbglib_maincontext.c: ... here.

	* src/rbglib_mainloop.c: supported ruby 1.9.0 thread model.

	* extconf.rb: removed a needless check.

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c: rb_hash_aset()'s key should be VALUE not ID.

2007-11-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c (source_prepare_add_poll_fd): treated
	G_IO_HUP as except case not read case.

2007-11-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c: don't use g_source_is_destroyed().

	* extconf.rb: detected curr_thread.

	* src/rbglib_mainloop.c: supported ruby 1.8.6 p0.

2007-11-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil_callback.c: used rb_thread_select() instead of
	rb_thread_wait_fd().

	* src/rbglib_mainloop.c: used G_IO_IN as initial events.

	* src/utils_callback.c: renamed to ...
	* src/rbgutil_callback.c: ... this.