@@ -1,3 +1,9 @@
+2008-01-07  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgobject.c (rbgobj_define_property_accessors),
+	  src/rbgobj_signal.c (rbgobj_define_action_methods): don't eval
+	empty string because that crashes ruby 1.9.0.
+
 2008-01-06  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgobj_enums.c (rbgobj_init_flags_class): added "_" prefix
